--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore local environment file
+/config/local_env.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
